Change ticketing link

--- a/public/grayman/index.htm
+++ b/public/grayman/index.htm
@@ -320,7 +320,7 @@
 
                         <div class="actions">
                             <div class="button-group">
-                                <a href="https://tickets.filmsat42.com.au/movie/the-gray-man/" target="_blank" rel="noopener" class="primary-button white">Get Tickets</a>
+                                <a href="https://tickets.filmsat42.com.au/the-gray-man/" target="_blank" rel="noopener" class="primary-button white">Get Tickets</a>
                             </div>
                         </div>
                     </div>
